--- a/portfolio.Rmd
+++ b/portfolio.Rmd
@@ -66,6 +66,6 @@ create_proj_card(
   img_src = "images/middsense_map.png",
   url = "https://github.com/Middsense/pre-processing",
   title = "Middsense",
-  text = "Manual approaches for detecting changes in road pavement quality are expensive and inefficient. In Professor Andrea Vaccari's lab at Middlebury, I investigated an alternative approach. The automated geospatial Python pipeline I co-developed extracts and processes synthetic aperature data along roads, for comparison with ground truth road quality data.",
+  text = "Manual approaches for detecting changes in road pavement quality are expensive and inefficient. In Professor Andrea Vaccari's lab at Middlebury, I investigated an alternative approach. The automated geospatial Python pipeline I co-developed extracts and processes synthetic aperture data along roads, for comparison with ground truth road quality data.",
   text2 = ""
 )
