link to colonial-sci github repo

--- a/portfolio.Rmd
+++ b/portfolio.Rmd
@@ -43,7 +43,7 @@ create_proj_card(
 ```{r}
 create_proj_card(
   img_src = "",
-  url = "http://comments.amnat.org/2021/01/call-for-special-topics-paper.html",
+  url = "https://github.com/mylesstokowski/colonial-sci",
   title = "Colonial legacies influence biodiversity lessons",
   text = "Caribbean natural history collections hold rich biological information. They also reflect how colonial history has influenced research trajectories in the region. I tailored analyses and visualizations of biodiversity data from GBIF to address research questions posed by collaborators in Tobago and the US. This work is part of a manuscript currently in review for the invited issue of The American Naturalist, Nature, Data and Power: How hegemonies shape biological knowledge.",
   text2 = ""
