--- a/index.Rmd
+++ b/index.Rmd
@@ -17,5 +17,5 @@ description: |
 site: distill::distill_website
 ---
 
-I'm an environmental studies, biology and computer science student graduating from Middlebury College in February '22. My work has focused on quantitative and geospatial approaches to understanding the environment.
+I'm an environmental studies, biology and computer science student graduating from Middlebury College in February '22. My work has focused on quantitative and geospatial approaches to studying the environment.
 
